# django-paypal-checkout

./: MANIFEST.in  README.md  pyproject.toml  setup.py
paypal/: __init__.py  admin.py  apps.py  client.py  conf.py
paypal/exceptions/: __init__.py  paypal.py
paypal/models/: __init__.py  transaction.py
paypal/utils/: __init__.py  payments.py
